filter cars my company name and model
